--- a/lectures/lec13/index.html
+++ b/lectures/lec13/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Icons</title>
+	<title>Icons and SVG</title>
 	<link rel="icon" href="img/favicon.ico" type="image/x-icon"/>
 	<!--include the stylesheet for using font awesome-->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css">
@@ -89,6 +89,12 @@
 
 	</p>
 </div>
+
+<hr>
+<h1>Material Icons</h1>
+
+<>
+
 
 </body>
 </html>
