--- a/labs/lab05/coordinated/index.html
+++ b/labs/lab05/coordinated/index.html
@@ -90,14 +90,26 @@
         //defines the categories from magnitude property using a lamda operation
         var magDimension = filter.dimension(function(d) {
 
-            //lamda operations are simple version of if/else statements. EX: If mag is less than 1.2 return the first element, else continue to the second element
             var mag = d.properties.mag;
-            return mag < 1.2 ? '1-1.2' :
-                mag < 1.5 ? '1.2-1.5' :
-                    mag < 2 ? '1.5-2' :
-                        mag < 2.5 ? '2-2.5' :
-                            mag < 3 ? '2.5-3' :
-                                '>3'
+            mag_class = ">3";
+
+            if (mag <1.2) {
+            	mag_class = "1-1.2"
+            } else if ( mag >= 1.2 && mag < 1.5) {
+            	mag_class = "1.2-1.5"
+            } else if (mag >= 1.5 && mag < 2) {
+	            mag_class = "1.5-2"
+            } else if (mag >= 2 && mag < 2.5) {
+	            mag_class = "2-2.5"
+            } else if (mag >= 2 && mag < 2.5) {
+	            mag_class = "2-2.5"
+            } else if (mag >= 2.5 && mag < 3) {
+	            mag_class = "2.5-3"
+            } else {
+            	mag_class = ">3"
+            }
+
+            return mag_class;
         });
 
 
