--- a/labs/lab03/map7.html
+++ b/labs/lab03/map7.html
@@ -130,7 +130,7 @@
 
     function setColor(density) {
         var id = 0;
-        if (density > 18) { id = 4; }
+        if (density > 18 && pop >29) { id = 4; }
         else if (density > 13 && density <= 18) { id = 3; }
         else if (density > 10 && density <= 13) { id = 2; }
         else if (density > 5 &&  density <= 10) { id = 1; }
