--- a/lectures/lec14/index2.html
+++ b/lectures/lec14/index2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 	<meta charset="utf-8">
-	<title>Word cloud</title>
+	<title>Text Analysis</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Cairo|Lobster|Titillium+Web" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet">
