--- a/labs/lab04/step2.html
+++ b/labs/lab04/step2.html
@@ -25,7 +25,13 @@
     }.then(function(data) {
 
         //add the code for data processing here
-
+        month,rain
+        Oct,3.11
+        Nov,6.93
+        Dec,7.72
+        Jan,6.42
+        Feb,5.12
+        Mar,4.45
     }));
 
     x.domain(data.map(function(d) { return d.month; }));
