--- a/labs/lab02/index.html
+++ b/labs/lab02/index.html
@@ -5,7 +5,7 @@
 <body>
 
     <button type="button" onclick="helloworld()"> Click Me!</button>
-    <div id="foo">foo</div>
+    <div id="foo"></div>
     <script src="js/main.js"></script>
 </body>
 </html>
