--- a/lectures/lec05/4-event.html
+++ b/lectures/lec05/4-event.html
@@ -2,19 +2,19 @@
 <html>
 <head>
     <style>
-        div {
+        #s {
             height: 100px;
             width: 100px;
             background-color: steelblue;
             margin:5px;
         }
     </style>
-    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
 </head>
 <body>
-<div> </div>
+<div id="s"> </div>
 <script>
-    d3.selectAll("div")
+    d3.selectAll("#s")
         .on("mouseover", function(){
             d3.select(this)
                 .style("background-color", "orange");
