--- a/lectures/lec04/part02/map1.html
+++ b/lectures/lec04/part02/map1.html
@@ -35,8 +35,8 @@
         [44.5682559, -123.2778293],
         [44.5682445, -123.2800823]
     ], {
-        color: 'red',
-        weight: 5
+        color: 'blue',
+        weight: 10
     }).addTo(map);
 
     // Create area feature for Strand Ag Hall, style and add to map
