--- a/lectures/lec07/5-bar-v5.html
+++ b/lectures/lec07/5-bar-v5.html
@@ -2,6 +2,21 @@
 <html>
 <head>
     <script src="https://d3js.org/d3.v5.min.js"></script>
+    <style>
+
+        .bar {
+            fill: steelblue;
+        }
+
+        .bar:hover {
+            fill: brown;
+        }
+
+        .axis--x path {
+            display: none;
+        }
+
+    </style>
 </head>
 <body>
 <svg width="960" height="500"></svg>
