--- a/labs/lab03/index.html
+++ b/labs/lab03/index.html
@@ -9,17 +9,15 @@
     <link rel="stylesheet" type='text/css' media='all' href="https://geoviz.ceoas.oregonstate.edu/pwb/css/webslides.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"/>
-
-    <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.6.14/c3.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="all" href="css/style.css">
+    <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://geoviz.ceoas.oregonstate.edu/pwb/js/webslides.min.js"></script>
-    <style>
-        html, body, #map { width: 100%; height: 100%; margin: 0; background: #fff; }
-    </style>
+    <script src="https://unpkg.com/d3@5/dist/d3.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.6.14/c3.min.js"></script>
 </head>
 <body>
-
 <main role="main">
     <article id="webslides">
         <!--1.Landing Page-->
@@ -43,10 +41,78 @@
         <section class="bg-apple slide-top">
             <div id="mymap2"></div>
         </section>
+
+        <section class="bg-apple  slide-top">
+            <div id="mychart" >
+                <div id="chart"></div>
+                <span id="load">Load</span>
+                <span id="unload">Unload</span>
+            </div>
+        </section>
+
+        <section class="bg-apple  slide-top">
+            <div id="mychart" >
+                <div id="chart"></div>
+                <span id="load">Load</span>
+                <span id="unload">Unload</span>
+            </div>
+        </section>
     </article>
 </main>
-
 <script>
+
+
+
+  var chart = c3.generate({
+    bindto: '#chart',
+    data: {
+      columns: [
+        ['data1', 30, 200, 100, 400, 150, 250],
+        ['data2', 50, 20, 10, 40, 15, 25]
+      ],
+      axes: {
+        data2: 'y2'
+      },
+      types: {
+        data2: 'bar' // ADD
+      }
+    },
+    axis: {
+      y: {
+        label: {
+          text: 'Y Label',
+          position: 'outer-middle'
+        }
+      },
+      y2: {
+        show: true,
+        label: {
+          text: 'Y2 Label',
+          position: 'outer-middle'
+        }
+      }
+    }
+  });
+
+  $("#load").on("click", function() {
+
+    chart.load({
+      columns: [
+        ['data3', 300, 100, 250, 150, 300, 150, 500],
+        ['data4', 100, 200, 150, 50, 100, 250]
+      ]
+    });
+
+  })
+
+  $("#unload").on("click", function() {
+
+    chart.unload({
+      ids: ['data3', 'data4']
+    });
+
+  });
+
 
     var map = L.map("mymap", {zoomControl: false, scrollWheelZoom: false}).setView([1.290270, 103.851959], 8);
 
@@ -89,6 +155,13 @@
             ]);
             map2.invalidateSize();
         }
+
+        if (crtDiv.attr("id") === "mychart") {
+
+
+
+        }
+
 
     });
 
