--- a/labs/lab03/index.html
+++ b/labs/lab03/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="please add">
     <!-- CSS Base -->
-    <link rel="stylesheet" type='text/css' media='all' href="https://geoviz.ceoas.oregonstate.edu/pwb/css/webslides.css">
+    <link rel="stylesheet" type='text/css' media='all' href="css/webslides.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.6.14/c3.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="all" href="css/style.css">
     <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="https://geoviz.ceoas.oregonstate.edu/pwb/js/webslides.min.js"></script>
+    <script src="webslides.min.js"></script>
     <script src="https://unpkg.com/d3@5/dist/d3.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.6.14/c3.min.js"></script>
 </head>
