--- a/labs/lab03/index.html
+++ b/labs/lab03/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" media="all" href="css/style.css">
     <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="webslides.min.js"></script>
+    <script src="js/webslides.min.js"></script>
     <script src="https://unpkg.com/d3@5/dist/d3.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.6.14/c3.min.js"></script>
 </head>
@@ -48,8 +48,6 @@
         <section class="bg-apple  slide-top">
             <div id="mychart2" >
                 <div id="chart2"></div>
-                <span id="load">Load</span>
-                <span id="unload">Unload</span>
             </div>
         </section>
     </article>
