--- a/labs/lab03/index.html
+++ b/labs/lab03/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.6.14/c3.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="all" href="css/style.css">
+    <!-- Javascript Library -->
     <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="js/webslides.min.js"></script>
@@ -20,6 +21,7 @@
 <body>
 <main role="main">
     <article id="webslides">
+      <!-- the landing scene -->
         <section class="bg-apple">
             <video class="background-video dark" autoplay muted loop>
                 <source src="assets/view.mp4" type="video/mp4">
@@ -30,13 +32,15 @@
                 </h1>
             </div>
         </section>
+        <!-- the first map -->
         <section class="bg-apple slide-top">
             <div id="mymap"></div>
         </section>
+        <!-- the second map -->
         <section class="bg-apple slide-top">
             <div id="mymap2"></div>
         </section>
-
+        <!-- the first chart -->
         <section class="bg-apple  slide-top">
             <div id="mychart" >
                 <div id="chart"></div>
@@ -44,7 +48,7 @@
                 <span id="unload">Unload</span>
             </div>
         </section>
-
+        <!-- the second chart -->
         <section class="bg-apple  slide-top">
             <div id="mychart2" >
                 <div id="chart2"></div>
