--- a/lectures/lec13/index.html
+++ b/lectures/lec13/index.html
@@ -34,7 +34,8 @@
             radius: 35,
             blur: 10,
             maxZoom: 17,
-            gradient: {0.05: 'blue', 0.25: 'lime',  0.27: 'yellow', 0.3: 'red'}
+            //gradient: {0.05: 'blue', 0.25: 'lime',  0.27: 'yellow', 0.3: 'red'}
+            gradient: {0.05: 'white', 0.25: 'oreg',  0.27: 'yellow', 0.3: 'red'}
         }).addTo(map);
     });
 
