--- a/labs/lab03/index.html
+++ b/labs/lab03/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Pure Water Brew</title>
+    <title>lab 3</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="please add">
