--- a/lectures/lec11/animation.html
+++ b/lectures/lec11/animation.html
@@ -1,90 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Flow map</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"/>
-    <style>
-        html, body, #mymap { width: 100%; height: 100%; margin: 0; background: #fff; }
-
-        #element1 {
-            position: fixed;
-            top: 0px;
-            right: 0px;
-            z-index: 900;     /*a larger z-index than the container*/
-            color: #666666;
-            display: block;
-            overflow-x: hidden;
-            overflow-y: hidden;
-            background-color: #f5f5f5;
-        }
-
-        #element2 {
-            position: fixed;
-            top: 50px;
-            right: 0px;
-            z-index: 900;     /*a larger z-index than the container*/
-            color: #666666;
-            display: block;
-            overflow-x: hidden;
-            overflow-y: hidden;
-            background-color: #f5f5f5;
-        }
-
-    </style>
-    <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <!--<script src="https://unpkg.com/leaflet-swoopy"></script>-->
-    <script src="js/Leaflet.SwoopyArrow-customized.js"></script>
-    <script src="assets/kits.js"></script>
+  <title>Flow map</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css" />
+  <style>
+    html,
+    body,
+    #mymap {
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      background: #fff;
+    }
+  </style>
+  <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <!--<script src="https://unpkg.com/leaflet-swoopy"></script>-->
+  <script src="js/Leaflet.SwoopyArrow-customized.js"></script>
 </head>
-<body>
-<div id="element1">element 1</div>
-<div id="element2">element 2</div>
-<div id="mymap"></div>
-<script>
 
+<body>
+  <div id="mymap"></div>
+  <script>
     var map = L.map("mymap").setView([45.505374, -122.978524], 5);
 
-    L.tileLayer('https://cartodb-basemaps-{s}.global.ssl.fastly.net/dark_all/{z}/{x}/{y}.png', {
-        attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a> &copy; <a href="http://cartodb.com/attributions">CartoDB</a>',
-        subdomains: 'abcd',
-        maxZoom: 19
+    L.tileLayer('https://cartodb-basemaps-{s}.global.ssl.fastly.net/dark_all/{z}/{x}/{y}@2X.png', {
+      maxZoom: 19
     }).addTo(map);
 
-    L.swoopyArrow([53.52, 13.4], [53.525, 14.41], {
-        color: "aqua",
-        opacity: 0.7,
-        weight:'3'
-    }).addTo(map);
 
-    $("#element1").on("click", function(){alert("element 1 clicked!")});
-    $("#element2").on("click", function(){$("#element1").hide()});
+    $.getJSON("assets/kits.json", function(kits) {
 
 
-    for(let i=0; i<kits.features.length; i++) {
+      for (let i = 0; i < kits.features.length; i++) {
 
-        setTimeout(function () {
-            lng = kits.features[i].geometry.coordinates[0];
-            lat = kits.features[i].geometry.coordinates[1];
+        setTimeout(function() {
+          lng = kits.features[i].geometry.coordinates[0];
+          lat = kits.features[i].geometry.coordinates[1];
 
-            L.swoopyArrow([45.505374, -122.978524], [lat, lng], {
-                labelFontSize: 12,
-                iconAnchor: [20, 10],
-                iconSize: [30, 16],
-                color: '#fff20f',
-                opacity: 0.7,
-                weight:'3'
-            }).addTo(map);
-            // layergroup2.addLayer( L.marker([lat, lng], {icon: pwbIcon}));
+          L.swoopyArrow([45.505374, -122.978524], [lat, lng], {
+            labelFontSize: 12,
+            iconAnchor: [20, 10],
+            iconSize: [30, 16],
+            color: '#fff20f',
+            opacity: 0.7,
+            weight: '3'
+          }).addTo(map);
+          // layergroup2.addLayer( L.marker([lat, lng], {icon: pwbIcon}));
 
         }, 400 * i);
-    }
+      }
 
 
-
-
-
-</script>
+    });
+  </script>
 </body>
+
 </html>
