--- a/labs/lab03/index.html
+++ b/labs/lab03/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <title>lab 3</title>
   <meta charset="utf-8">
@@ -24,7 +23,9 @@
   <article id="webslides">
     <!-- the landing scene -->
     <section class="bg-black">
-
+      <video class="background-video dark" autoplay muted loop>
+        <source src="assets/view.mp4" type="video/mp4">
+      </video>
       <div class="wrap aligncenter">
         <h1>
           <strong>Story Map Title</strong>
@@ -56,62 +57,21 @@
   </article>
 
   <script>
-    var chart = c3.generate({
-      bindto: '#chart',
-      data: {
-        columns: [
-          ['data1', 30, 200, 100, 400, 150, 250],
-          ['data2', 50, 20, 10, 40, 15, 25]
-        ],
-        axes: {
-          data2: 'y2'
-        },
-        types: {
-          data2: 'line' // ADD
-        }
-      },
-      axis: {
-        y: {
-          label: {
-            text: 'Y Label',
-            position: 'outer-middle'
-          }
-        },
-        y2: {
-          show: true,
-          label: {
-            text: 'Y2 Label',
-            position: 'outer-middle'
-          }
-        }
-      }
-    });
+    // make the web slide object.
+    var ws = new WebSlides();
 
-    $("#load").on("mouseover", function() {
-
-      chart.load({
-        columns: [
-          ['data3', 300, 100, 250, 150, 300, 150, 500],
-          ['data4', 100, 200, 150, 50, 100, 250]
-        ]
-      });
-
-    })
-
-    $("#unload").on("click", function() {
-
-      chart.unload({
-        ids: ['data3', 'data4']
-      });
-
-    });
-
-
+    // declare the first map object
     var map = L.map("mymap", {
       zoomControl: false,
       scrollWheelZoom: false
     }).setView([1.290270, 103.851959], 8);
 
+    // add a basemap to the first map
+    L.tileLayer('https://cartodb-basemaps-{s}.global.ssl.fastly.net/light_all/{z}/{x}/{y}@2x.png', {
+      maxZoom: 19
+    }).addTo(map);
+
+    // decalre the second map object
     var map2 = L.map("mymap2", {
       zoomControl: false,
       scrollWheelZoom: false
@@ -120,96 +80,137 @@
       [22.8, -67.4]
     ]);
 
-
-    L.tileLayer('https://cartodb-basemaps-{s}.global.ssl.fastly.net/light_all/{z}/{x}/{y}@2x.png', {
-      maxZoom: 19
-    }).addTo(map);
-
+    // add a basemap for the second map
     L.tileLayer('https://cartodb-basemaps-{s}.global.ssl.fastly.net/dark_all/{z}/{x}/{y}@2x.png', {
       maxZoom: 19
     }).addTo(map2);
 
-
-    ws = new WebSlides();
+    // bind a function to the slide change event of web slides
     ws.el.addEventListener('ws:slide-change', function() {
 
+      // capture all the div under the currently displaying section
       crtDiv = $(".current div");
       //Map 1 'flyto' animation location and function
       if (crtDiv.attr("id") === "mymap") {
+        // Checks if the map container size changed and updates the map if so
         map.invalidateSize();
-        //starting location latitude and longitude
-        //map.setView([1.290270, 103.851959], 9);
-        //Fly to animation  new latitude and longitude
+        //Fly to a new location.
         map.flyTo([45.514685, -122.987080], 10, {
           animate: true,
           duration: 23
         });
-        //outline of Washington county
-      }
-
-
-      if (crtDiv.attr("id") === "mymap2") {
-
+      } else if (crtDiv.attr("id") === "mymap2") {
+        // fitBounds will fit the map to the boundary of the viewport (monitor)
         map2.fitBounds([
           [49.3, -138.5],
           [22.8, -67.4]
         ]);
         map2.invalidateSize();
-      }
-
-      if (crtDiv.attr("id") === "mychart2") {
-
-        Promise.all([
-          d3.csv('assets/test1.csv'),
-          d3.csv('assets/test2.csv'),
-          d3.json('assets/counties.geojson')
-        ]).then(function(datasets) {
-
-          var dataseries1 = ["t"];
-          var dataseries2 = ["q"];
-
-          datasets[0].forEach(function(d) {
-            dataseries1.push(+d["data1"]);
-            dataseries2.push(+d["data2"]);
-          });
+      } else if (crtDiv.attr("id") === "mychart1") {
 
 
-          var chart = c3.generate({
-            bindto: '#chart2',
-            data: {
-              columns: [
-                dataseries1,
-                dataseries2
-              ],
-              axes: {
-                dataseries1: 'y2'
-              },
-              types: {
-                t: 'bar',
-                q: 'spline' // ADD
+        var chart = c3.generate({
+          bindto: '#chart',
+          data: {
+            columns: [
+              ['data1', 30, 200, 100, 400, 150, 250],
+              ['data2', 50, 20, 10, 40, 15, 25]
+            ],
+            axes: {
+              data2: 'y2'
+            },
+            types: {
+              data2: 'line' // ADD
+            }
+          },
+          axis: {
+            y: {
+              label: {
+                text: 'Y Label',
+                position: 'outer-middle'
               }
             },
-            axis: {
-              y: {
-                label: {
-                  text: 'Y Label',
-                  position: 'outer-middle'
-                }
-              },
-              y2: {
-                show: true,
-                label: {
-                  text: 'Y2 Label',
-                  position: 'outer-middle'
-                }
+            y2: {
+              show: true,
+              label: {
+                text: 'Y2 Label',
+                position: 'outer-middle'
               }
             }
+          }
+        });
+
+        $("#load").on("mouseover", function() {
+
+          chart.load({
+            columns: [
+              ['data3', 300, 100, 250, 150, 300, 150, 500],
+              ['data4', 100, 200, 150, 50, 100, 250]
+            ]
           });
 
         })
 
+        $("#unload").on("click", function() {
+
+          chart.unload({
+            ids: ['data3', 'data4']
+          });
+
+        });
       }
 
+    } else if (crtDiv.attr("id") === "mychart2") {
+
+
+      Promise.all([
+        d3.csv('assets/test1.csv'),
+        d3.csv('assets/test2.csv'),
+        d3.json('assets/counties.geojson')
+      ]).then(function(datasets) {
+
+        var dataseries1 = ["t"];
+        var dataseries2 = ["q"];
+
+        datasets[0].forEach(function(d) {
+          dataseries1.push(+d["data1"]);
+          dataseries2.push(+d["data2"]);
+        });
+
+
+        var chart = c3.generate({
+          bindto: '#chart2',
+          data: {
+            columns: [
+              dataseries1,
+              dataseries2
+            ],
+            axes: {
+              dataseries1: 'y2'
+            },
+            types: {
+              t: 'bar',
+              q: 'spline' // ADD
+            }
+          },
+          axis: {
+            y: {
+              label: {
+                text: 'Y Label',
+                position: 'outer-middle'
+              }
+            },
+            y2: {
+              show: true,
+              label: {
+                text: 'Y2 Label',
+                position: 'outer-middle'
+              }
+            }
+          }
+        });
+
+      })
 
     });
   </script>
