--- a/labs/lab03/index2.html
+++ b/labs/lab03/index2.html
@@ -87,6 +87,59 @@
     }).addTo(map2);
 
 
+    var chart1 = c3.generate({
+      bindto: "#chart1",
+      data: {
+        columns: [
+          ['data1', 30, 200, 100, 400, 150, 250],
+          ['data2', 50, 20, 10, 40, 15, 25]
+        ],
+        axes: {
+          data2: 'y2'
+        },
+        types: {
+          data2: 'line' // ADD
+        }
+      },
+      axis: {
+        y: {
+          label: {
+            text: 'Y Label',
+            position: 'outer-middle'
+          }
+        },
+        y2: {
+          show: true,
+          label: {
+            text: 'Y2 Label',
+            position: 'outer-middle'
+          }
+        }
+      }
+    });
+
+    $("#load").on("mouseover", function() {
+
+      chart1.load({
+        columns: [
+          ['data3', 300, 100, 250, 150, 300, 150, 500],
+          ['data4', 100, 200, 150, 50, 100, 250]
+        ]
+      });
+
+    })
+
+    $("#unload").on("click", function() {
+
+      chart1.unload({
+        ids: ['data3', 'data4']
+      });
+
+    });
+
+
+
+
     // bind a function to the slide change event of web slides
     ws.el.addEventListener('ws:slide-change', function() {
 
@@ -109,55 +162,7 @@
           [22.8, -67.4]
         ]);
       } else if (crtDiv.attr("id") === "mychart1") {
-        var chart1 = c3.generate({
-          bindto: "#chart1",
-          data: {
-            columns: [
-              ['data1', 30, 200, 100, 400, 150, 250],
-              ['data2', 50, 20, 10, 40, 15, 25]
-            ],
-            axes: {
-              data2: 'y2'
-            },
-            types: {
-              data2: 'line' // ADD
-            }
-          },
-          axis: {
-            y: {
-              label: {
-                text: 'Y Label',
-                position: 'outer-middle'
-              }
-            },
-            y2: {
-              show: true,
-              label: {
-                text: 'Y2 Label',
-                position: 'outer-middle'
-              }
-            }
-          }
-        });
-
-        $("#load").on("mouseover", function() {
-
-          chart1.load({
-            columns: [
-              ['data3', 300, 100, 250, 150, 300, 150, 500],
-              ['data4', 100, 200, 150, 50, 100, 250]
-            ]
-          });
-
-        })
-
-        $("#unload").on("click", function() {
-
-          chart1.unload({
-            ids: ['data3', 'data4']
-          });
-
-        });
+        chart1.resize();
       } else if (crtDiv.attr("id") === "mychart2") {
 
 
