--- a/labs/lab03/index3.html
+++ b/labs/lab03/index3.html
@@ -40,6 +40,9 @@
     <!-- the second map -->
     <section class="bg-apple">
       <div id="mymap2"></div>
+      <div class="wrap mind-process">
+        <div id="chart3"></div>
+      </div>
     </section>
     <!-- the first chart -->
     <section class="bg-apple">
@@ -139,12 +142,48 @@
 
 
 
+    var chart3 = c3.generate({
+      bindto: "#chart3",
+      size: {
+        width: 240,
+        height: 400
+      },
+      data: {
+        columns: [
+          ['data1', 30, 200, 100, 400, 150, 250],
+          ['data2', 50, 20, 10, 40, 15, 25]
+        ],
+        axes: {
+          data2: 'y2'
+        },
+        types: {
+          data2: 'line' // ADD
+        }
+      },
+      axis: {
+        y: {
+          label: {
+            text: 'Y Label',
+            position: 'outer-middle'
+          }
+        },
+        y2: {
+          show: true,
+          label: {
+            text: 'Y2 Label',
+            position: 'outer-middle'
+          }
+        }
+      }
+    });
+
 
     // bind a function to the slide change event of web slides
     ws.el.addEventListener('ws:slide-change', function() {
 
       // capture all the div under the currently displaying section
       crtDiv = $(".current div");
+
       //Map 1 'flyto' animation location and function
       if (crtDiv.attr("id") === "mymap") {
         // Checks if the map container size changed and updates the map if so
@@ -161,10 +200,10 @@
           [49.3, -138.5],
           [22.8, -67.4]
         ]);
+        chart3.resize();
       } else if (crtDiv.attr("id") === "mychart1") {
         chart1.resize();
       } else if (crtDiv.attr("id") === "mychart2") {
-
 
         Promise.all([
           d3.csv('assets/test1.csv'),
