--- a/labs/lab03/index3.html
+++ b/labs/lab03/index3.html
@@ -141,38 +141,18 @@
     });
 
 
-
-    var chart3 = c3.generate({
+    var mapChart = c3.generate({
       bindto: "#chart3",
       size: {
-        width: 240,
-        height: 400
+        height: 100,
+        width: 300
       },
       data: {
         columns: [
-          ['data1', 30, 200, 100, 400, 150, 250],
-          ['data2', 50, 20, 10, 40, 15, 25]
+          ['data1', 30, 200, 100, 400, 150, 250]
         ],
-        axes: {
-          data2: 'y2'
-        },
         types: {
           data2: 'line' // ADD
-        }
-      },
-      axis: {
-        y: {
-          label: {
-            text: 'Y Label',
-            position: 'outer-middle'
-          }
-        },
-        y2: {
-          show: true,
-          label: {
-            text: 'Y2 Label',
-            position: 'outer-middle'
-          }
         }
       }
     });
@@ -200,9 +180,14 @@
           [49.3, -138.5],
           [22.8, -67.4]
         ]);
-        chart3.resize();
+        mapChart.resize({
+          height: 100,
+          width: 300
+        });
       } else if (crtDiv.attr("id") === "mychart1") {
+
         chart1.resize();
+
       } else if (crtDiv.attr("id") === "mychart2") {
 
         Promise.all([
